# nwis

./: .gitattributes  MANIFEST.in  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
binder/: environment.yml
bmi_nwis/: bmi.py  bmi_nwis.py  utils.py
docs/source/: conf.py  index.md  index.rst
notebooks/: config_file.yaml  nwis.ipynb
nwis/: __init__.py  _version.py  bmi.py  cli.py  nwis.py
src/nwis/: __init__.py  bmi.py  cli.py  nwis.py
tests/: cli_test.py  nwis_test.py  test_cli.py  test_nwis.py
